--- a/notebooks/day17.ipynb
+++ b/notebooks/day17.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "id": "a10bf7ca-adb1-438e-9a22-7819e71946c6",
    "metadata": {},
    "outputs": [
@@ -11,7 +11,7 @@
      "output_type": "stream",
      "text": [
       "['target', 'area:', 'x=117..164,', 'y=-140..-89']\n",
-      "[117, 164] [-140, -89]\n"
+      "[20, 30] [-10, -5]\n"
      ]
     }
    ],
@@ -21,74 +21,17 @@
     "print(data)\n",
     "rangeX = [117,164]\n",
     "rangeY = [-140,-89]\n",
+    "rangeX = [20,30]\n",
+    "rangeY = [-10,-5]\n",
     "print(rangeX, rangeY)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "9632b3bd-b708-44a9-ae8f-3b4a7ab3e6bf",
+   "execution_count": 25,
+   "id": "13361bf7-4fac-4ee9-9891-70b38942597d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "119 -91 velocity 1 -14 (15, 0) 0\n",
-      "120 -105 velocity 0 -15 (15, 0) 0\n",
-      "120 -120 velocity 0 -16 (15, 0) 0\n",
-      "120 -136 velocity 0 -17 (15, 0) 0\n",
-      "133 -91 velocity 2 -14 (16, 0) 0\n",
-      "135 -105 velocity 1 -15 (16, 0) 0\n",
-      "136 -120 velocity 0 -16 (16, 0) 0\n",
-      "136 -136 velocity 0 -17 (16, 0) 0\n",
-      "147 -91 velocity 3 -14 (17, 0) 0\n",
-      "150 -105 velocity 2 -15 (17, 0) 0\n",
-      "152 -120 velocity 1 -16 (17, 0) 0\n",
-      "153 -136 velocity 0 -17 (17, 0) 0\n",
-      "161 -91 velocity 4 -14 (18, 0) 0\n",
-      "120 -90 velocity 0 -14 (15, 1) 1\n",
-      "120 -104 velocity 0 -15 (15, 1) 1\n",
-      "120 -119 velocity 0 -16 (15, 1) 1\n",
-      "120 -135 velocity 0 -17 (15, 1) 1\n",
-      "135 -90 velocity 1 -14 (16, 1) 1\n",
-      "136 -104 velocity 0 -15 (16, 1) 1\n",
-      "136 -119 velocity 0 -16 (16, 1) 1\n",
-      "136 -135 velocity 0 -17 (16, 1) 1\n",
-      "150 -90 velocity 2 -14 (17, 1) 1\n",
-      "152 -104 velocity 1 -15 (17, 1) 1\n",
-      "153 -119 velocity 0 -16 (17, 1) 1\n",
-      "153 -135 velocity 0 -17 (17, 1) 1\n",
-      "120 -102 velocity 0 -15 (15, 2) 3\n",
-      "120 -117 velocity 0 -16 (15, 2) 3\n",
-      "120 -133 velocity 0 -17 (15, 2) 3\n",
-      "136 -102 velocity 0 -15 (16, 2) 3\n",
-      "136 -117 velocity 0 -16 (16, 2) 3\n",
-      "136 -133 velocity 0 -17 (16, 2) 3\n",
-      "153 -102 velocity 0 -15 (17, 2) 3\n",
-      "153 -117 velocity 0 -16 (17, 2) 3\n",
-      "153 -133 velocity 0 -17 (17, 2) 3\n",
-      "120 -99 velocity 0 -15 (15, 3) 6\n",
-      "120 -114 velocity 0 -16 (15, 3) 6\n",
-      "120 -130 velocity 0 -17 (15, 3) 6\n",
-      "136 -99 velocity 0 -15 (16, 3) 6\n",
-      "136 -114 velocity 0 -16 (16, 3) 6\n",
-      "136 -130 velocity 0 -17 (16, 3) 6\n",
-      "153 -99 velocity 0 -15 (17, 3) 6\n",
-      "153 -114 velocity 0 -16 (17, 3) 6\n",
-      "153 -130 velocity 0 -17 (17, 3) 6\n",
-      "120 -95 velocity 0 -15 (15, 4) 10\n",
-      "120 -110 velocity 0 -16 (15, 4) 10\n",
-      "120 -126 velocity 0 -17 (15, 4) 10\n",
-      "136 -95 velocity 0 -15 (16, 4) 10\n",
-      "136 -110 velocity 0 -16 (16, 4) 10\n",
-      "136 -126 velocity 0 -17 (16, 4) 10\n",
-      "153 -95 velocity 0 -15 (17, 4) 10\n",
-      "153 -110 velocity 0 -16 (17, 4) 10\n",
-      "153 -126 velocity 0 -17 (17, 4) 10\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def new_pos(pos,vel):\n",
     "    new_p = (pos[0]+vel[0],pos[1]+vel[1])\n",
@@ -98,29 +41,129 @@
     "    if vel[0] < 0:\n",
     "        new_v[0] = vel[0]+1\n",
     "    new_v[1] =vel[1]-1\n",
-    "    return new_p, new_v\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
+    "    return new_p, new_v"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "780686e9-4876-42b6-b631-f33d3fe0b417",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 0\n",
+      "1 1\n",
+      "2 3\n",
+      "3 6\n",
+      "4 10\n",
+      "5 15\n",
+      "6 21\n",
+      "7 28\n",
+      "8 36\n",
+      "9 45\n",
+      "10 55\n",
+      "11 66\n",
+      "12 78\n",
+      "13 91\n",
+      "14 105\n",
+      "15 120\n",
+      "16 136\n",
+      "17 153\n",
+      "18 171\n",
+      "19 190\n"
+     ]
+    }
+   ],
+   "source": [
+    "#136 too low\n",
+    "for i in range(20):\n",
+    "    print(i,i*(i+1)//2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "9632b3bd-b708-44a9-ae8f-3b4a7ab3e6bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20 -10 velocity 1 -5 6 0 0\n",
+      "22 -6 velocity 3 -4 7 0 0\n",
+      "25 -10 velocity 2 -5 7 0 0\n",
+      "26 -6 velocity 4 -4 8 0 0\n",
+      "30 -10 velocity 3 -5 8 0 0\n",
+      "30 -6 velocity 5 -4 9 0 0\n",
+      "20 -5 velocity 1 -4 6 1 1\n",
+      "21 -9 velocity 0 -5 6 1 1\n",
+      "25 -5 velocity 2 -4 7 1 1\n",
+      "27 -9 velocity 1 -5 7 1 1\n",
+      "30 -5 velocity 3 -4 8 1 1\n",
+      "21 -7 velocity 0 -5 6 2 3\n",
+      "28 -7 velocity 0 -5 7 2 3\n",
+      "21 -9 velocity 0 -6 6 3 6\n",
+      "28 -9 velocity 0 -6 7 3 6\n",
+      "21 -5 velocity 0 -6 6 4 10\n",
+      "28 -5 velocity 0 -6 7 4 10\n",
+      "21 -6 velocity 0 -7 6 5 15\n",
+      "28 -6 velocity 0 -7 7 5 15\n",
+      "21 -7 velocity 0 -8 6 6 21\n",
+      "28 -7 velocity 0 -8 7 6 21\n",
+      "21 -8 velocity 0 -9 6 7 28\n",
+      "28 -8 velocity 0 -9 7 7 28\n",
+      "21 -9 velocity 0 -10 6 8 36\n",
+      "28 -9 velocity 0 -10 7 8 36\n",
+      "36\n"
+     ]
+    }
+   ],
+   "source": [
+    "max_y = 0\n",
     "for vx in range(100):\n",
     "    for vy in range(100):\n",
     "        x,y = 0,0\n",
-    "        initials = (vx,vy)\n",
-    "        max_y = 0\n",
+    "        initials = vy\n",
+    "        initialsx =vx\n",
     "        while y >= rangeY[0]:\n",
-    "            if y > max_y: max_y = y\n",
     "            if x >= rangeX[0] and x <= rangeX[1] and y >= rangeY[0] and y <= rangeY[1]:\n",
-    "                print(x,y,'velocity',vx,vy, initials, max_y)\n",
+    "                if (initials*(initials+1))//2 > max_y: max_y = (initials*(initials+1))//2\n",
+    "                print(x,y,'velocity',vx,vy, initialsx,initials, initials*(initials+1)//2)\n",
     "            (x,y),(vx,vy) = new_pos((x,y),(vx,vy))\n",
-    "        #print(x,y,'velocity',vx,vy)"
+    "print(max_y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "6be1d35e-4ee2-490a-95e3-0c7829e1c317",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "21 -10 velocity 0 -11\n"
+     ]
+    }
+   ],
+   "source": [
+    "x,y = 0,0\n",
+    "vx,vy = 6,9\n",
+    "for _ in range(25):\n",
+    "    if x >= rangeX[0] and x <= rangeX[1] and y >= rangeY[0] and y <= rangeY[1]:\n",
+    "        print(x,y,'velocity',vx,vy, )\n",
+    "    (x,y),(vx,vy) = new_pos((x,y),(vx,vy))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6be1d35e-4ee2-490a-95e3-0c7829e1c317",
+   "id": "421b6efb-cc18-448e-b47a-f38f8cbe306f",
    "metadata": {},
    "outputs": [],
    "source": []
