--- a/notebooks/day16.ipynb
+++ b/notebooks/day16.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "'00000000010101010011001001000100011110000011011001'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
        "(981, 5474, 0)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,7 +73,7 @@
     "        reading = True\n",
     "        while reading:\n",
     "            pack = packet[temp:temp+5]\n",
-    "           # print(pack)\n",
+    "           #print(pack)\n",
     "            if pack[0] == '0':\n",
     "                reading = False\n",
     "            number+= pack[1:]\n",
@@ -115,27 +115,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
     "# part 2\n",
     "\n",
     "def packets_op(packets,n):\n",
-    "    print(packets)\n",
     "    if n == 0:\n",
     "        sol = 0\n",
     "        for p in packets:\n",
-    "            sol+= p\n",
-    "            \n",
+    "            sol+=p\n",
     "        return sol\n",
+    "    \n",
     "    elif n == 1:\n",
     "        sol = 1\n",
     "        for p in packets:\n",
     "            sol *= p\n",
     "        return sol\n",
     "    elif n == 2:\n",
-    "        sol = 10**999999999\n",
+    "        sol = 10**99\n",
     "        for p in packets:\n",
     "            if p < sol: sol = p\n",
     "        return sol\n",
@@ -166,59 +165,44 @@
     "\n",
     "def read_packet(p_0):\n",
     "    p_ver = int(packet[p_0:p_0+3],2)\n",
-    "    #print('version',p_ver)\n",
     "    ID = int(packet[p_0+3:p_0+6],2)\n",
-    "    #print(ID)\n",
     "    if ID == 4:\n",
     "        temp = p_0+6\n",
     "        number = ''\n",
     "        reading = True\n",
     "        while reading:\n",
     "            pack = packet[temp:temp+5]\n",
-    "           # print(pack)\n",
     "            if pack[0] == '0':\n",
     "                reading = False\n",
     "            number+= pack[1:]\n",
     "            temp += 5\n",
     "        sol = int(number,2)\n",
     "        new_p = temp\n",
-    "        #return p_ver, temp-p_0, int(number,2) #temp-p_0 size of packet\n",
-    "    \n",
+    "\n",
     "    else:\n",
-    "        \n",
     "        length_ID = packet[p_0+6]\n",
-    "     #   print('length_ID',length_ID)\n",
     "        if length_ID == '1':\n",
     "            n_packets = int(packet[p_0+7:p_0+7+11],2)\n",
-    "      #      print('n_packets', n_packets)\n",
     "            new_p = p_0+7+11\n",
     "            packets = []\n",
     "            while n_packets:\n",
     "                n_packets -= 1\n",
     "                b, c = read_packet(new_p)\n",
-    "                \n",
     "                new_p += b\n",
     "                packets.append(c)\n",
-    "                \n",
-    "            #return p_ver, new_p-p_0, 0\n",
+    "\n",
     "            \n",
     "        else:\n",
     "            total_bits = int(packet[p_0+7:p_0+7+15],2)\n",
-    "       #     print('total_bits', total_bits)\n",
     "            last_b = p_0+7+15 + total_bits\n",
     "            new_p = p_0+7+15\n",
     "            packets = []\n",
     "            while new_p < last_b:\n",
     "                b, c = read_packet(new_p)\n",
-    "                \n",
     "                new_p += b\n",
-    "                packets.append(c)\n",
-    "        \n",
+    "                packets.append(c)    \n",
     "        sol = packets\n",
-    "        #print(len(packets),ID)\n",
-    "        \n",
-    "        \n",
-    "    print(ID, sol)\n",
+    " \n",
     "    sol = packets_op(sol,ID)\n",
     "    return new_p-p_0, sol\n",
     "        \n"
@@ -226,113 +210,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5474, 299227024091)"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "print('que pasha')\n",
     "read_packet(0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "386\n"
-     ]
-    }
-   ],
-   "source": [
-    "a = '101000000'\n",
-    "b = '001000010'\n",
-    "\n",
-    "print(int(str(a),2)+int(str(b),2) )\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "320"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "int(str(a),2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "66"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "int(str(b),2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "322"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "int(str('101000010'),2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "invalid literal for int() with base 2: '386'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-24-1f46d2c0f070>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'386'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 2: '386'"
-     ]
-    }
-   ],
-   "source": [
-    "110000010"
    ]
   },
   {
