--- a/notebooks/day17.ipynb
+++ b/notebooks/day17.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "a10bf7ca-adb1-438e-9a22-7819e71946c6",
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +28,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "13361bf7-4fac-4ee9-9891-70b38942597d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +45,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "9632b3bd-b708-44a9-ae8f-3b4a7ab3e6bf",
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +75,6 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "421b6efb-cc18-448e-b47a-f38f8cbe306f",
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +111,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b334f7bd-214a-426b-bd6a-36479b617d39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +122,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -141,7 +136,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
