--- a/notebooks/day17.ipynb
+++ b/notebooks/day17.ipynb
@@ -3,6 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "a5dffe4d",
    "metadata": {},
    "outputs": [
     {
@@ -28,6 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "826ff9a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,6 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "1fb6f772",
    "metadata": {},
    "outputs": [
     {
@@ -75,6 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
+   "id": "dab58225",
    "metadata": {},
    "outputs": [
     {
@@ -111,6 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0350ae34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +127,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -136,7 +141,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
