--- a/notebooks/day20.ipynb
+++ b/notebooks/day20.ipynb
@@ -3,6 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
+   "id": "9d0c5ec7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,6 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
+   "id": "95940c3a",
    "metadata": {},
    "outputs": [
     {
@@ -39,6 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
+   "id": "c7caccae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,6 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
+   "id": "79ce2739",
    "metadata": {},
    "outputs": [
     {
@@ -420,6 +424,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "214ee370",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -427,7 +432,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -441,7 +446,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
