--- a/notebooks/day21.ipynb
+++ b/notebooks/day21.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "81b6e097-1779-43d2-ac30-499909c90080",
    "metadata": {},
    "outputs": [
     {
@@ -25,6 +24,7 @@
     }
    ],
    "source": [
+    "# part 1\n",
     "data = \"\"\"Player 1 starting position: 8\n",
     "        Player 2 starting position: 2\"\"\"\n",
     "p1 = 8-1\n",
@@ -70,45 +70,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "bf3bc98d-af70-4364-9664-ace29ae85d3e",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "907224"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "105619718613031 94052321632284\n"
+     ]
     }
    ],
    "source": [
-    "# 907224 too high"
+    "# part 2\n",
+    "data = \"\"\"Player 1 starting position: 8\n",
+    "        Player 2 starting position: 2\"\"\"\n",
+    "p1 = 8-1\n",
+    "p2 = 2-1\n",
+    "# 10 positions mod 10, 0 to 9\n",
+    "\n",
+    "Scores = {3:1, # score versus number of universes\n",
+    "        4:3,\n",
+    "        5:6,\n",
+    "        6:7,\n",
+    "        7:6,\n",
+    "        8:3,\n",
+    "        9:1,}\n",
+    "#(p1, p2, score_p1, score_p2, n_universes, turn_p1)\n",
+    "to_check = []\n",
+    "to_check.append((p1,p2,0,0,1,True))\n",
+    "\n",
+    "w_p1 = 0\n",
+    "w_p2 = 0\n",
+    "\n",
+    "while to_check:\n",
+    "    p1, p2, score_p1, score_p2, n_universes, turn_p1 = to_check.pop()\n",
+    "    \n",
+    "    if turn_p1:\n",
+    "        for score in Scores:\n",
+    "            new_p1 = (p1 + score)%10\n",
+    "            new_score_p1 = score_p1+new_p1+1\n",
+    "            new_n_universes = n_universes*Scores[score]\n",
+    "            new_turn_p1 = False\n",
+    "            \n",
+    "            if new_score_p1 >= 21:\n",
+    "                w_p1 += new_n_universes\n",
+    "            else:\n",
+    "                to_check.append((new_p1, p2, new_score_p1, score_p2, new_n_universes, new_turn_p1))\n",
+    "    else:\n",
+    "        for score in Scores:\n",
+    "            new_p2 = (p2 + score)%10\n",
+    "            new_score_p2 = score_p2+new_p2+1\n",
+    "            new_n_universes = n_universes*Scores[score]\n",
+    "            new_turn_p1 = True\n",
+    "            \n",
+    "            if new_score_p2 >= 21:\n",
+    "                w_p2 += new_n_universes\n",
+    "            else:\n",
+    "                to_check.append((p1, new_p2, score_p1, new_score_p2, new_n_universes, new_turn_p1))\n",
+    "        \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "print(w_p1,w_p2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p1 105619718613031\n"
+     ]
+    }
+   ],
+   "source": [
+    "if w_p1 > w_p2:\n",
+    "    print('p1', w_p1)\n",
+    "else:\n",
+    "    print('p2', w_p2)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23956182-db7f-4f12-9459-2f973528bd53",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "3:1\n",
-    "4:3\n",
-    "5:6\n",
-    "6:7\n",
-    "7:6\n",
-    "8:3\n",
-    "9:1\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -122,7 +179,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
