--- a/notebooks/day21.ipynb
+++ b/notebooks/day21.ipynb
@@ -3,6 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
+   "id": "2bac5001",
    "metadata": {},
    "outputs": [
     {
@@ -71,6 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "ed14216c",
    "metadata": {},
    "outputs": [
     {
@@ -138,6 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "b4efe9a6",
    "metadata": {},
    "outputs": [
     {
@@ -158,6 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1dabf4cb",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -165,7 +169,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -179,7 +183,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
