--- a/notebooks/day21.ipynb
+++ b/notebooks/day21.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "2bac5001",
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +71,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ed14216c",
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +138,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "b4efe9a6",
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +158,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1dabf4cb",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -169,7 +165,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -183,7 +179,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
