--- a/notebooks/day22.ipynb
+++ b/notebooks/day22.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "9c10f9bf-ac2e-451e-b8e0-82a3bc33ebc5",
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +47,6 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "8c64f105-6241-422e-9cfe-b08ab766f0f9",
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +85,6 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "964b9009-0ce2-447f-b41a-0677e848a690",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +105,6 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "15c53ebc-4f49-46f9-8d70-3e2d94c4583a",
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +125,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a499c1b-41e0-4442-acf2-fb9452861c9f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -137,7 +132,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -151,7 +146,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
