--- a/notebooks/day23.ipynb
+++ b/notebooks/day23.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fcf3a7c6-c8a3-4d12-8d17-078b324d96b2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -11,7 +10,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -25,7 +24,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
