--- a/notebooks/day23.ipynb
+++ b/notebooks/day23.ipynb
@@ -2,15 +2,499 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#############\n",
+    "#...........#\n",
+    "###C#B#D#A###\n",
+    "  #B#D#A#C#\n",
+    "  #########"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "0d070ff3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#'],\n",
+       " ['#', '.', '.', '.', '.', '.', '.', '.', '.', '.', '.', '.', '#'],\n",
+       " ['#', '#', '#', 'C', '#', 'B', '#', 'D', '#', 'A', '#', '#', '#'],\n",
+       " ['#', '#', '#', 'B', '#', 'D', '#', 'A', '#', 'C', '#'],\n",
+       " ['#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#']]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f = open(\"../data/data_day23.txt\", \"r\")\n",
+    "data = list(f)\n",
+    "data = [list(line.strip()) for line in data]\n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "8bf51b71",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{(1, 1), (2, 1), (4, 1), (6, 1), (8, 1), (10, 1), (11, 1)}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "maze = set()\n",
+    "hallways = set()\n",
+    "positions = [0,0,0,0,0,0,0,0]\n",
+    "for y in range(len(data)):\n",
+    "    for x in range(len(data[y])):\n",
+    "        if data[y][x] == \".\":\n",
+    "            maze.add((x, y))\n",
+    "            hallways.add((x,y))\n",
+    "        if data[y][x] in \"ABCD\":\n",
+    "            maze.add((x, y))\n",
+    "            if data[y][x] == \"A\":\n",
+    "                if positions[0] == 0:\n",
+    "                    positions[0] = (x, y)\n",
+    "                else:\n",
+    "                    positions[1] = (x, y)\n",
+    "            if data[y][x] == \"B\":\n",
+    "                if positions[2] == 0:\n",
+    "                    positions[2] = (x, y)\n",
+    "                else:\n",
+    "                    positions[3] = (x, y)\n",
+    "            if data[y][x] == \"C\":\n",
+    "                if positions[4] == 0:\n",
+    "                    positions[4] = (x, y)\n",
+    "                else:\n",
+    "                    positions[5] = (x, y)\n",
+    "            if data[y][x] == \"D\":\n",
+    "                if positions[6] == 0:\n",
+    "                    positions[6] = (x, y)\n",
+    "                else:\n",
+    "                    positions[7] = (x, y)\n",
+    "\n",
+    "maze\n",
+    "positions\n",
+    "hallways\n",
+    "good = set()\n",
+    "for h in hallways:\n",
+    "    if not h[0] in [3,5,7,9]:\n",
+    "        good.add(h)\n",
+    "hallways = good\n",
+    "hallways\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "500e861a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def check_end(p):\n",
+    "    if p[0] in [(3,2),(3,3)] and p[1] in [(3,2),(3,3)]:\n",
+    "        if p[2] in [(5,2),(5,3)] and p[3] in [(5,2),(5,3)]:\n",
+    "            if p[4] in [(7,2),(7,3)] and p[5] in [(7,2),(7,3)]:\n",
+    "                if p[6] in [(9,2),(9,3)] and p[7] in [(9,2),(9,3)]:\n",
+    "                    return True\n",
+    "    return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "bb732458",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import deque\n",
+    "def bfs(start, end):\n",
+    "    queue = deque()\n",
+    "    queue.append((start, 0))\n",
+    "    visited = set()\n",
+    "    visited.add(start)\n",
+    "    while queue:\n",
+    "        pos, steps = queue.popleft()\n",
+    "        if pos == end:\n",
+    "            return steps\n",
+    "        for d in [(0,1),(0,-1),(1,0),(-1,0)]:\n",
+    "            new_pos = (pos[0]+d[0], pos[1]+d[1])\n",
+    "            if new_pos in maze and new_pos not in visited:\n",
+    "                if new_pos not in p:\n",
+    "                    queue.append((new_pos, steps+1))\n",
+    "                    visited.add(new_pos)\n",
+    "    return -1\n",
+    "\n",
+    "def bfs2(start, end):\n",
+    "    queue = deque()\n",
+    "    queue.append((start, 0))\n",
+    "    visited = set()\n",
+    "    visited.add(start)\n",
+    "    while queue:\n",
+    "        pos, steps = queue.popleft()\n",
+    "        if pos == end:\n",
+    "            return steps\n",
+    "        for d in [(0,1),(0,-1),(1,0),(-1,0)]:\n",
+    "            new_pos = (pos[0]+d[0], pos[1]+d[1])\n",
+    "            if new_pos in maze and new_pos not in visited:\n",
+    "                queue.append((new_pos, steps+1))\n",
+    "                visited.add(new_pos)\n",
+    "    return 0\n",
+    "\n",
+    "def proyected_energy(p):\n",
+    "    energy = 0\n",
+    "    for i in range(8):\n",
+    "        if i == 0:\n",
+    "            if p[i] == (3,3):\n",
+    "                continue\n",
+    "            if p[i] == (3,2) and p[1] == (3,3):\n",
+    "                continue\n",
+    "            energy += bfs2(p[i], (3,3))*1\n",
+    "        elif i == 1:\n",
+    "            if p[i] == (3,3):\n",
+    "                continue\n",
+    "            if p[i] == (3,2) and p[0] == (3,3):\n",
+    "                continue\n",
+    "            energy += bfs2(p[i], (3,3))*1\n",
+    "        elif i == 2:\n",
+    "            if p[i] == (5,3):\n",
+    "                continue\n",
+    "            if p[i] == (5,2) and p[3] == (5,3):\n",
+    "                continue\n",
+    "            energy += bfs2(p[i], (5,3))*10\n",
+    "        elif i == 3:\n",
+    "            if p[i] == (5,3):\n",
+    "                continue\n",
+    "            if p[i] == (5,2) and p[2] == (5,3):\n",
+    "                continue\n",
+    "            energy += bfs2(p[i], (5,3))*10\n",
+    "        elif i == 4:\n",
+    "            if p[i] == (7,3):\n",
+    "                continue\n",
+    "            if p[i] == (7,2) and p[5] == (7,3):\n",
+    "                continue\n",
+    "            energy += bfs2(p[i], (7,3))*100\n",
+    "        elif i == 5:\n",
+    "            if p[i] == (7,3):\n",
+    "                continue\n",
+    "            if p[i] == (7,2) and p[4] == (7,3):\n",
+    "                continue\n",
+    "            energy += bfs2(p[i], (7,3))*100\n",
+    "        elif i == 6:\n",
+    "            if p[i] == (9,3):\n",
+    "                continue\n",
+    "            if p[i] == (9,2) and p[7] == (9,3):\n",
+    "                continue\n",
+    "            energy += bfs2(p[i], (9,3))*1000\n",
+    "        elif i == 7:\n",
+    "            if p[i] == (9,3):\n",
+    "                continue\n",
+    "            if p[i] == (9,2) and p[6] == (9,3):\n",
+    "                continue\n",
+    "            energy += bfs2(p[i], (9,3))*1000\n",
+    "    return energy\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "c7840d3d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1 0\n",
+      "50000\n",
+      "43768 2523\n",
+      "100000\n",
+      "71603 3993\n",
+      "150000\n",
+      "96195 13858\n",
+      "200000\n",
+      "132798 13198\n",
+      "250000\n",
+      "159210 9501\n",
+      "13586\n",
+      "13546\n",
+      "13526\n",
+      "13524\n",
+      "13520\n",
+      "300000\n",
+      "155969 13738\n",
+      "350000\n",
+      "149936 13737\n",
+      "400000\n",
+      "144996 13391\n",
+      "450000\n",
+      "136136 13767\n",
+      "500000\n",
+      "129432 13200\n",
+      "550000\n",
+      "119995 13980\n",
+      "600000\n",
+      "113202 13791\n",
+      "650000\n",
+      "103718 14356\n",
+      "700000\n",
+      "97769 12612\n",
+      "750000\n",
+      "91274 13783\n",
+      "800000\n",
+      "81279 13416\n",
+      "850000\n",
+      "73176 13722\n",
+      "900000\n",
+      "63463 14316\n",
+      "950000\n",
+      "56402 13088\n",
+      "1000000\n",
+      "50363 13742\n",
+      "1050000\n",
+      "45668 13920\n",
+      "1100000\n",
+      "41069 13593\n",
+      "1150000\n",
+      "35515 13721\n",
+      "1200000\n",
+      "29048 13120\n",
+      "1250000\n",
+      "18555 13086\n",
+      "1300000\n",
+      "10440 14130\n",
+      "1350000\n",
+      "2780 13213\n"
+     ]
+    }
+   ],
+   "source": [
+    "p = positions.copy()\n",
+    "energy = 0\n",
+    "total_steps = 0\n",
+    "to_check = deque([(p,energy, total_steps)])\n",
+    "min_energy = 0\n",
+    "counter = 0\n",
+    "\n",
+    "while to_check:\n",
+    "    if counter % 50000 == 0:\n",
+    "        print(counter)\n",
+    "        print(len(to_check), energy)\n",
+    "    counter += 1\n",
+    "    #to_check.sort(key=lambda x: x[1])\n",
+    "    p, energy,total_steps = to_check.popleft()\n",
+    "    #print(len(to_check))\n",
+    "    if check_end(p):\n",
+    "        if min_energy == 0:\n",
+    "            min_energy = energy\n",
+    "        else:\n",
+    "            if energy < min_energy:\n",
+    "                min_energy = energy\n",
+    "                print(min_energy)\n",
+    "        continue\n",
+    "    if  energy + proyected_energy(p) > 15000:\n",
+    "        continue\n",
+    "    if  energy + proyected_energy(p) > min_energy+1000 and min_energy != 0:\n",
+    "        continue\n",
+    "    if total_steps > 60:\n",
+    "        continue\n",
+    "    condidates_to_move = []\n",
+    "    homed = False\n",
+    "    for i in range(8):\n",
+    "        animal_pos = p[i]\n",
+    "        if i == 0:\n",
+    "            if animal_pos == (3,3):\n",
+    "                continue\n",
+    "            if animal_pos == (3,2) and p[1] == (3,3):\n",
+    "                continue\n",
+    "        elif i == 1:\n",
+    "            if animal_pos == (3,3):\n",
+    "                continue\n",
+    "            if animal_pos == (3,2) and p[0] == (3,3):\n",
+    "                continue\n",
+    "        elif i == 2:\n",
+    "            if animal_pos == (5,3):\n",
+    "                continue\n",
+    "            if animal_pos == (5,2) and p[3] == (5,3):\n",
+    "                continue\n",
+    "        elif i == 3:\n",
+    "            if animal_pos == (5,3):\n",
+    "                continue\n",
+    "            if animal_pos == (5,2) and p[2] == (5,3):\n",
+    "                continue\n",
+    "        elif i == 4:\n",
+    "            if animal_pos == (7,3):\n",
+    "                continue\n",
+    "            if animal_pos == (7,2) and p[5] == (7,3):\n",
+    "                continue\n",
+    "        elif i == 5:\n",
+    "            if animal_pos == (7,3):\n",
+    "                continue\n",
+    "            if animal_pos == (7,2) and p[4] == (7,3):\n",
+    "                continue\n",
+    "        elif i == 6:\n",
+    "            if animal_pos == (9,3):\n",
+    "                continue\n",
+    "            if animal_pos == (9,2) and p[7] == (9,3):\n",
+    "                continue\n",
+    "        elif i == 7:\n",
+    "            if animal_pos == (9,3):\n",
+    "                continue\n",
+    "            if animal_pos == (9,2) and p[6] == (9,3):\n",
+    "                continue\n",
+    "            \n",
+    "        if animal_pos[1] in [2,3]:\n",
+    "            condidates_to_move.append(i)\n",
+    "            continue\n",
+    "\n",
+    "            for pos in hallways:\n",
+    "                steps = bfs(animal_pos, pos)\n",
+    "                candidates = []\n",
+    "                if steps != -1:\n",
+    "                    new_p = p.copy()\n",
+    "                    new_p[i] = pos\n",
+    "                    if i in [0,1]:\n",
+    "                        new_energy = energy+steps*1\n",
+    "                    elif i in [2,3]:\n",
+    "                        new_energy = energy+steps*10\n",
+    "                    elif i in [4,5]:\n",
+    "                        new_energy = energy+steps*100\n",
+    "                    elif i in [6,7]:\n",
+    "                        new_energy = energy+steps*1000\n",
+    "                    to_check.append((new_p, new_energy, total_steps+steps))\n",
+    "                    #candidates.sort(key=lambda x: x[1])\n",
+    "                    #for new_p, new_energy in candidates: \n",
+    "                    #    to_check.append((new_p, new_energy))\n",
+    "        \n",
+    "        elif animal_pos[1] == 1:\n",
+    "            if i in [0,1]:\n",
+    "                objectives = [(3,2),(3,3)]\n",
+    "            elif i in [2,3]:\n",
+    "                objectives = [(5,2),(5,3)]\n",
+    "            elif i in [4,5]:\n",
+    "                objectives = [(7,2),(7,3)]\n",
+    "            elif i in [6,7]:\n",
+    "                objectives = [(9,2),(9,3)]\n",
+    "\n",
+    "            steps = bfs(animal_pos, objectives[1])\n",
+    "            if steps != -1:\n",
+    "                new_p = p.copy()\n",
+    "                new_p[i] = objectives[1]\n",
+    "                if i in [0,1]:\n",
+    "                    new_energy = energy+steps*1\n",
+    "                elif i in [2,3]:\n",
+    "                    new_energy = energy+steps*10\n",
+    "                elif i in [4,5]:\n",
+    "                    new_energy = energy+steps*100\n",
+    "                elif i in [6,7]:\n",
+    "                    new_energy = energy+steps*1000\n",
+    "                homed = True\n",
+    "                to_check.appendleft((new_p, new_energy, total_steps+steps))\n",
+    "                continue\n",
+    "            steps = bfs(animal_pos, objectives[0])\n",
+    "            if steps != -1:\n",
+    "                if i == 0:\n",
+    "                    if p[1] != (3,3):\n",
+    "                        continue\n",
+    "                elif i == 1:\n",
+    "                    if p[0] != (3,3):\n",
+    "                        continue\n",
+    "                elif i == 2:\n",
+    "                    if p[3] != (5,3):\n",
+    "                        continue\n",
+    "                elif i == 3:\n",
+    "                    if p[2] != (5,3):\n",
+    "                        continue\n",
+    "                elif i == 4:\n",
+    "                    if p[5] != (7,3):\n",
+    "                        continue\n",
+    "                elif i == 5:\n",
+    "                    if p[4] != (7,3):\n",
+    "                        continue\n",
+    "                elif i == 6:\n",
+    "                    if p[7] != (9,3):\n",
+    "                        continue\n",
+    "                elif i == 7:\n",
+    "                    if p[6] != (9,3):\n",
+    "                        continue\n",
+    "                new_p = p.copy()\n",
+    "                new_p[i] = objectives[0]\n",
+    "                if i in [0,1]:\n",
+    "                    new_energy = energy+steps*1\n",
+    "                elif i in [2,3]:\n",
+    "                    new_energy = energy+steps*10\n",
+    "                elif i in [4,5]:\n",
+    "                    new_energy = energy+steps*100\n",
+    "                elif i in [6,7]:\n",
+    "                    new_energy = energy+steps*1000\n",
+    "                homed = True\n",
+    "                to_check.appendleft((new_p, new_energy, total_steps+steps))\n",
+    "                continue\n",
+    "    if not homed:\n",
+    "        for i in condidates_to_move:\n",
+    "            animal_pos = p[i]\n",
+    "            for pos in hallways:\n",
+    "                steps = bfs(animal_pos, pos)\n",
+    "                candidates = []\n",
+    "                if steps != -1:\n",
+    "                    new_p = p.copy()\n",
+    "                    new_p[i] = pos\n",
+    "                    if i in [0,1]:\n",
+    "                        new_energy = energy+steps*1\n",
+    "                    elif i in [2,3]:\n",
+    "                        new_energy = energy+steps*10\n",
+    "                    elif i in [4,5]:\n",
+    "                        new_energy = energy+steps*100\n",
+    "                    elif i in [6,7]:\n",
+    "                        new_energy = energy+steps*1000\n",
+    "                    to_check.append((new_p, new_energy, total_steps+steps))\n",
+    "\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "63849e44",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13526"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "min_energy"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -25,6 +509,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.9"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "4d4ca316943b1c10b2d2fe45bc63e3ee46dd5de765a98eebd898e75532c32ebb"
+   }
   }
  },
  "nbformat": 4,
