--- a/notebooks/day23.ipynb
+++ b/notebooks/day23.ipynb
@@ -494,7 +494,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -508,11 +508,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.10.9 (tags/v3.10.9:1dd9be6, Dec  6 2022, 20:01:21) [MSC v.1934 64 bit (AMD64)]"
   },
   "vscode": {
    "interpreter": {
-    "hash": "4d4ca316943b1c10b2d2fe45bc63e3ee46dd5de765a98eebd898e75532c32ebb"
+    "hash": "8db983136147b7bdb2ff82c19168c2e2e47fac4f5ec69581c5919ea65915f153"
    }
   }
  },
